[gd_scene load_steps=12 format=3 uid="uid://bn8hn6umnjoeb"]

[ext_resource type="Script" uid="uid://b005j3c3vu2s2" path="res://character/character_ui_canvas.gd" id="1_8qiw1"]
[ext_resource type="Shader" uid="uid://bs8nax4sphxxm" path="res://character/ui_assets/Shaders/cooldown.gdshader" id="2_8qiw1"]
[ext_resource type="Theme" uid="uid://lwpyypu4qtj" path="res://ui/themes/character_ui_theme.tres" id="3_6hg2s"]
[ext_resource type="Texture2D" uid="uid://m43ay4wc4ouq" path="res://character/ui_assets/PNG/Outline/crosshair001.png" id="3_ny6jb"]
[ext_resource type="Texture2D" uid="uid://dwu7dl4h0u76y" path="res://character/ui_assets/Vector/double_jump.svg" id="3_pdutl"]
[ext_resource type="Texture2D" uid="uid://bblvtkthnjx8s" path="res://character/ui_assets/Vector/bullet_time.svg" id="4_ny6jb"]
[ext_resource type="Shader" uid="uid://d3xvaquegfyoh" path="res://character/ui_assets/Shaders/chroma_abberation.gdshader" id="7_6hg2s"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ybyru"]
shader = ExtResource("2_8qiw1")
shader_parameter/cooldown_color = Color(0.3, 0.3, 0.3, 0.5)
shader_parameter/percent = 1.0
shader_parameter/affect_alpha = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6hg2s"]
shader = ExtResource("2_8qiw1")
shader_parameter/cooldown_color = Color(0, 0.62, 0.527, 0.501961)
shader_parameter/percent = 1.0
shader_parameter/affect_alpha = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ywu5b"]
shader = ExtResource("2_8qiw1")
shader_parameter/cooldown_color = Color(0, 0, 0, 1)
shader_parameter/percent = 1.0
shader_parameter/affect_alpha = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ny6jb"]
shader = ExtResource("7_6hg2s")
shader_parameter/levels = 3
shader_parameter/spread = 0.01

[node name="UICanvasLayer" type="CanvasLayer"]
script = ExtResource("1_8qiw1")
crosshair_base_texture = ExtResource("3_ny6jb")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_6hg2s")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="DoubleJumpIndicator" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_ybyru")
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("3_pdutl")
expand_mode = 1

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="BulletTimeIndicator" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_6hg2s")
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("4_ny6jb")
expand_mode = 1

[node name="CrosshairContainer" type="CenterContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Crosshair" type="TextureRect" parent="CrosshairContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_ywu5b")
layout_mode = 2
texture = ExtResource("3_ny6jb")

[node name="CollisionCrosshair" type="TextureRect" parent="CrosshairContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("3_ny6jb")

[node name="BulletTimeVFX" type="ColorRect" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
material = SubResource("ShaderMaterial_ny6jb")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
